# scdiagnostics

./: .gitignore  README.md  pyproject.toml
.github/scripts/: bump_version.py
.github/workflows/: release.yml
docs/: quickstart.ipynb
src/scdiagnostics/: __init__.py  data.py  dimred.py  marginal.py  spatial.py
